2006-08-31  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_add_object):
	Set all properties of default sources in one g_object_set().

2006-08-30  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c:
	(compare_deactivate_single_node):
	When unlinking source/operations , flush the parent's sink pad, so any
	stream locks are released.
	* gnl/gnloperation.c:
	(element_is_valid_filter): Scan pads AND templates to figure out if the
	element is a valid filter, and properly establish if it has dynamic
	pads,
	(get_unused_static_sink_pad):
	comments,
	(get_request_sink_pad):
	New function for getting request sink pads.
	(add_sink_pad):
	Add support for request sink pads,
	(synchronize_sinks):
	Don't try to add pads if it fails.
	* gnl/gnlsource.c:
	(ghost_seek_pad):
	Emit 'no-more-pads' after unblocking the controlled source pad. Not
	doing this would cause deadlocks in compositions with operations.

2006-08-25  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (update_pipeline):
	Remove the ghostpad if the composition becomes empty.

2006-08-24  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_init),
	(gnl_composition_reset), (gnl_composition_event_handler),
	(no_more_pads_object_cb), (compare_relink_single_node),
	(compare_relink_stack), (update_pipeline):
	Only set ghostpad target and/or send seek event once all the objects of
	the stack are linked.
	Fixes #352389
	This is done through the use of comp->private->waitingpads.
	Simplified update_pipeline accordingly.
	Added more comments.

2006-08-23  Wim Taymans  <wim@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_class_init), (control_internal_pad),
	(gnl_object_ghost_pad_no_target):
	Add extra explanation for priority property, Fixes #352382.

2006-08-23  Wim Taymans  <wim@fluendo.com>

	* gnl/gnloperation.c: (gnl_operation_class_init),
	(element_is_valid_filter), (gnl_operation_add_element),